tests/errors/syn3.kt
fun wrongDelimiters() (
    println("Should use braces")
)